Navbar jump fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,8 +23,7 @@ html {
 }
 
 .stop-scrolling {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
